dodadena shopping cart On branch master

--- a/DrinkAndGo1/DrinkAndGo1/DrinkAndGo1.csproj
+++ b/DrinkAndGo1/DrinkAndGo1/DrinkAndGo1.csproj
@@ -80,6 +80,7 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -199,19 +200,31 @@
     <Compile Include="Controllers\DrinksController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\ShoppingCartController.cs" />
     <Compile Include="Data\DrinkAndGoContext.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201808301736530_InitialCreate.cs" />
+    <Compile Include="Migrations\201808301736530_InitialCreate.Designer.cs">
+      <DependentUpon>201808301736530_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201809122342473_shoppingCartItemm.cs" />
+    <Compile Include="Migrations\201809122342473_shoppingCartItemm.Designer.cs">
+      <DependentUpon>201809122342473_shoppingCartItemm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Category.cs" />
     <Compile Include="Models\Drink.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\ShoppingCart.cs" />
     <Compile Include="Models\ShoppingCartItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\DrinkListViewModel.cs" />
+    <Compile Include="ViewModels\ShoppingCartViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
@@ -462,6 +475,7 @@
     <Content Include="Views\Home\Details.cshtml" />
     <Content Include="Views\Drinks\Index.cshtml" />
     <Content Include="Views\Home\SearchOn.cshtml" />
+    <Content Include="Views\ShoppingCart\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -473,6 +487,14 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201808301736530_InitialCreate.resx">
+      <DependentUpon>201808301736530_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201809122342473_shoppingCartItemm.resx">
+      <DependentUpon>201809122342473_shoppingCartItemm.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
